# shipbot_ws

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: shipbot.pc  shipbot_bringup.pc  shipbot_description.pc  shipbot_navigation.pc  shipbot_perception.pc  shipbot_teleop.pc
devel/lib/python3/dist-packages/shipbot_teleop/: __init__.py
devel/lib/shipbot_navigation/: odometry_publisher
devel/lib/shipbot_teleop/: shipbot_teleop_key
devel/share/roseus/ros/shipbot_navigation/: manifest.l
devel/share/shipbot/cmake/: shipbotConfig.cmake
devel/share/shipbot_bringup/cmake/: shipbot_bringupConfig.cmake
devel/share/shipbot_description/cmake/: shipbot_descriptionConfig.cmake
devel/share/shipbot_navigation/cmake/: shipbot_navigation-msg-extras.cmake  shipbot_navigation-msg-paths.cmake  shipbot_navigationConfig.cmake
devel/share/shipbot_perception/cmake/: shipbot_perceptionConfig.cmake
devel/share/shipbot_teleop/cmake/: shipbot_teleopConfig.cmake
src/shipbot/: CMakeLists.txt  package.xml
src/shipbot_bringup/: 99-turtlebot3-cdc.rules  CHANGELOG.rst  CMakeLists.txt  package.xml
src/shipbot_bringup/camera_info/: shipbot_camera.yaml
src/shipbot_bringup/launch/: shipbot_autonomous.launch  shipbot_camera.launch  shipbot_core.launch  shipbot_lidar.launch  shipbot_map.launch  shipbot_model.launch  shipbot_remote.launch  shipbot_robot.launch  shipbot_world.launch
src/shipbot_bringup/launch/includes/: description.launch.xml
src/shipbot_bringup/nodes/: mission_0.txt  mission_file_3.txt  shipbot_client
src/shipbot_bringup/scripts/: create_udev_rules
src/shipbot_bringup/worlds/: house.world
src/shipbot_description/: CMakeLists.txt  package.xml
src/shipbot_description/rviz/: shipbot.rviz
src/shipbot_description/urdf/: shipbot.gazebo.xacro  shipbot.urdf.xacro  shipbot.xacro
src/shipbot_localization/: CMakeLists.txt  package.xml
src/shipbot_localization/src/: localization.py
src/shipbot_navigation/: CMakeLists.txt  package.xml
src/shipbot_navigation/config/: gmapping_params.yaml  shipbot_lds_2d_gazebo.lua
src/shipbot_navigation/launch/: amcl.launch  move_base.launch  shipbot_gmapping.launch  shipbot_navigation.launch
src/shipbot_navigation/maps/: map_1208.pgm  map_1208.yaml  map_testbed1.pgm  map_testbed1.yaml
src/shipbot_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_waffle_pi.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/shipbot_navigation/rviz/: shipbot_map.rviz  shipbot_navigation.rviz
src/shipbot_navigation/src/: odometry_publisher.cpp
src/shipbot_perception/: CMakeLists.txt  package.xml
src/shipbot_perception/nodes/: valve_angle_finder
src/shipbot_teleop/: CMakeLists.txt
src/shipbot_teleop/launch/: shipbot_teleop_key.launch
src/shipbot_teleop/nodes/: shipbot_teleop_key
