<?xml version="1.0"?>
<package format="2">
  <name>shipbot_bringup</name>
  <version>0.0.0</version>
  <description>
    roslaunch scripts for starting the Shipbot
  </description>
  <license>BSD</license>
  <maintainer email="valmiki.kothare.vk@gmail.com">Valmiki Kothare</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <!-- <depend>diagnostic_msgs</depend> -->
  <depend>sensor_msgs</depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- <depend>turtlebot3_msgs</depend> -->
  <exec_depend>shipbot_description</exec_depend>
  <exec_depend>shipbot_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>ydlidar_ros_driver</exec_depend>
  <!-- <exec_depend>realsense_camera</exec_depend> for TurtleBot3 Waffle using Intel RealSense Camera -->
  <!-- <exec_depend>raspicam_node</exec_depend> for TurtleBot3 Waffle Pi using Raspberry Pi Camera -->
</package>
