<?xml version="1.0"?>
<package format="2">
  <name>shipbot_description</name>
  <description>
    3D models of the shipbot for simulation and visualization
  </description>
  <license>BSD</license>
  <maintainer email="valmiki.kothare.vk@gmail.com">Valmiki Kothare</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
