<?xml version="1.0"?>
<package format="2">
  <name>shipbot_navigation</name>
  <version>1.2.6</version>
  <description>
    The shipbot_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>BSD</license>
  <maintainer email="valmiki.kothare.vk@gmail.com">Valmiki Kothare</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>shipbot_bringup</exec_depend>
</package>