<?xml version="1.0"?>
<package format="2">
  <name>shipbot_navigation</name>
  <version>0.0.0</version>
  <description>
    The shipbot_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>BSD</license>
  <maintainer email="valmiki.kothare.vk@gmail.com">Valmiki Kothare</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>shipbot_bringup</exec_depend>
</package>